enable experimental features